--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "next": "13.4.12",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   }
 }
